force-app/main/default/objects/SalesforceStandardActivity__x/SalesforceStandardActivity__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceStandardActivity</externalName>
    <label>Task Salesforce</label>
    <pluralLabel>Tasks Salesforce</pluralLabel>
</CustomObject>