force-app/main/default/objects/SalesforceStandardActivity__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>AccountId</description>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>AccountId</label>
    <length>255</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Tasks Salesforce</relationshipLabel>
    <relationshipName>TasksSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>