force-app/main/default/objects/SalesforceStandardActivity__x/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <description>CallDisposition</description>
    <externalDeveloperName>CallDisposition</externalDeveloperName>
    <label>CallDisposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>