force-app/main/default/objects/SalesforceStandardActivity__x/fields/CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallDurationInSeconds__c</fullName>
    <description>CallDurationInSeconds</description>
    <externalDeveloperName>CallDurationInSeconds</externalDeveloperName>
    <label>CallDurationInSeconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>