force-app/main/default/objects/SalesforceStandardActivity__x/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <description>CallType</description>
    <externalDeveloperName>CallType</externalDeveloperName>
    <label>CallType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>