force-app/main/default/objects/SalesforceStandardActivity__x/fields/IsRecurrence__c.field-meta.xml
<CustomField>
    <fullName>IsRecurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsRecurrence</description>
    <externalDeveloperName>IsRecurrence</externalDeveloperName>
    <label>IsRecurrence</label>
    <type>Checkbox</type>
</CustomField>