force-app/main/default/objects/SalesforceStandardActivity__x/fields/IsSmsC__c.field-meta.xml
<CustomField>
    <fullName>IsSmsC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsSmsC</description>
    <externalDeveloperName>IsSmsC</externalDeveloperName>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>