force-app/main/default/objects/SalesforceStandardActivity__x/fields/PhoneNumberC__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberC__c</fullName>
    <description>PhoneNumberC</description>
    <externalDeveloperName>PhoneNumberC</externalDeveloperName>
    <label>Telefono Alternativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>