force-app/main/default/objects/SalesforceStandardActivity__x/fields/RecurrenceDayOfWeekMask__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceDayOfWeekMask__c</fullName>
    <description>RecurrenceDayOfWeekMask</description>
    <externalDeveloperName>RecurrenceDayOfWeekMask</externalDeveloperName>
    <label>RecurrenceDayOfWeekMask</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>