force-app/main/default/objects/SalesforceStandardActivity__x/fields/RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceInterval__c</fullName>
    <description>RecurrenceInterval</description>
    <externalDeveloperName>RecurrenceInterval</externalDeveloperName>
    <label>RecurrenceInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>