force-app/main/default/objects/SalesforceStandardActivity__x/fields/RecurrenceMonthOfYear__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceMonthOfYear__c</fullName>
    <description>RecurrenceMonthOfYear</description>
    <externalDeveloperName>RecurrenceMonthOfYear</externalDeveloperName>
    <label>RecurrenceMonthOfYear</label>
    <length>40</length>
    <type>Text</type>
</CustomField>