force-app/main/default/objects/SalesforceStandardActivity__x/fields/RecurrenceStartDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateOnly__c</fullName>
    <description>RecurrenceStartDateOnly</description>
    <externalDeveloperName>RecurrenceStartDateOnly</externalDeveloperName>
    <label>RecurrenceStartDateOnly</label>
    <type>DateTime</type>
</CustomField>