force-app/main/default/objects/SalesforceStandardActivity__x/fields/RecurrenceTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceTimeZoneSidKey__c</fullName>
    <description>RecurrenceTimeZoneSidKey</description>
    <externalDeveloperName>RecurrenceTimeZoneSidKey</externalDeveloperName>
    <label>RecurrenceTimeZoneSidKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>