force-app/main/default/objects/SalesforceStandardActivity__x/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <description>SystemModstamp</description>
    <externalDeveloperName>SystemModstamp</externalDeveloperName>
    <label>SystemModstamp</label>
    <type>DateTime</type>
</CustomField>