force-app/main/default/objects/SalesforceStandardActivity__x/fields/UserTag2C__c.field-meta.xml
<CustomField>
    <fullName>UserTag2C__c</fullName>
    <description>UserTag2C</description>
    <externalDeveloperName>UserTag2C</externalDeveloperName>
    <label>UserTag2C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>