force-app/main/default/objects/SalesforceStandardActivity__x/fields/UserTag3C__c.field-meta.xml
<CustomField>
    <fullName>UserTag3C__c</fullName>
    <description>UserTag3C</description>
    <externalDeveloperName>UserTag3C</externalDeveloperName>
    <label>UserTag3C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>