force-app/main/default/objects/SalesforceStandardActivity__x/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>WhatId</description>
    <externalDeveloperName>WhatId</externalDeveloperName>
    <label>WhatId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>